# embedded-ipc

./: BUILD.gn  README.en.md  README.md  ipc_center.cpp  ipc_object_proxy.cpp  ipc_object_stub.cpp  ipc_proxy_manager.cpp  ipc_skeleton.cpp  ipc_socket_manager.cpp  ipc_stub_manager.cpp  iremote_broker.cpp  iremote_object.cpp  message_parcel.cpp  ohos.build
include/: ipc_base.h  ipc_center.h  ipc_object_proxy.h  ipc_object_stub.h  ipc_proxy_manager.h  ipc_skeleton.h  ipc_socket_manager.h  ipc_stub_manager.h  iremote_broker.h  iremote_object.h  message_parcel.h
